# code-helper-rag

./: .gitignore  PHASES_COMPLETED.md  PHASE_5_SUMMARY.md  PHASE_6_SUMMARY.md  README.md  WEB_INTERFACE_SUCCESS.md  env.template  pyproject.toml  requirements.txt  requirements_api.txt  state
.cursor/rules/: rag.mdc
.github/workflows/: ci-cd.yml
docker/: docker-compose.yml
docker/monitoring/: prometheus.yml
docker/monitoring/grafana/provisioning/dashboards/: app-dashboard.json
docker/nginx/: nginx.conf
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  secrets.yaml  service.yaml
scripts/: chroma_offline_demo.py  demo_api.py  demo_processing.py  deploy.py  fix_chroma_setup.py  quick_demo.py  run_demo.py  setup.sh  simple_demo.py  simple_deploy_demo.py  simple_evaluation_demo.py  test_api.py  test_endpoints.py  test_evaluation.py  test_generation.py  test_ingestion.py  test_processing.py  test_vector.py  working_rag_demo.py
src/: __init__.py
src/api/: __init__.py  app.py  auth.py  dependencies.py  endpoints.py  exceptions.py  middleware.py  models.py
src/config/: __init__.py  settings.py
src/evaluation/: __init__.py  ab_testing.py  performance_monitor.py  ragas_evaluator.py
src/generation/: __init__.py  context_processor.py  llm_providers.py  pipeline.py  prompt_engineering.py  response_generator.py
src/ingestion/: __init__.py  base_collector.py  github_crawler.py  pipeline.py  stackoverflow_collector.py
src/processing/: __init__.py  base_processor.py  chunking_strategies.py  code_processor.py  pipeline.py  python_analyzer.py  qa_processor.py
src/utils/: __init__.py  async_utils.py  logger.py  text_utils.py
src/vector/: __init__.py  chroma_alternative.py  embeddings.py  pinecone_store.py  pipeline.py  similarity_search.py
terraform/: main.tf  variables.tf
tests/: __init__.py
tests/unit/: test_config.py  test_generation.py  test_ingestion.py  test_processing.py  test_utils.py  test_vector.py
web_app/: main.py
